// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppService #launchBackup should make a backup with a previous index: Define journal entry 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "from": "disk",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Define journal entry 2`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "path": Object {
        "data": Array [
          47,
          97,
          110,
          111,
          116,
          104,
          101,
          114,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
    },
    "type": 2,
  },
  "from": "disk",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Define journal entry 3`] = `
Object {
  "entry": undefined,
  "from": "disk",
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Launch backup (normal) 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Launch backup (normal) 2`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "path": Object {
        "data": Array [
          47,
          97,
          110,
          111,
          116,
          104,
          101,
          114,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
    },
    "type": 2,
  },
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Launch backup (normal) 3`] = `
Object {
  "entry": undefined,
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with a previous index: Launch backup (normal) 4`] = `
Object {
  "response": Object {
    "code": 0,
  },
}
`;

exports[`AppService #launchBackup should make a backup with error (from client): Launch backup (with error) 1`] = `
Object {
  "response": Object {
    "code": 1,
    "message": undefined,
    "needRefreshCache": false,
  },
}
`;

exports[`AppService #launchBackup should make a backup with error (from server): Define journal entry 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "from": "disk",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with error (from server): Define journal entry 2`] = `
Object {
  "entry": undefined,
  "from": "disk",
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with error (from server): Launch backup (with error from server) 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with error (from server): Launch backup (with error from server) 2`] = `
Object {
  "entry": undefined,
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with error (from server): Launch backup (with error from server) 3`] = `
Object {
  "response": Object {
    "code": 1,
  },
}
`;

exports[`AppService #launchBackup should make a backup with update: Define journal entry 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "from": "disk",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with update: Define journal entry 2`] = `
Object {
  "entry": undefined,
  "from": "disk",
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with update: Define journal entry 3`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
    },
    "type": 1,
  },
  "from": "network",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with update: Launch backup (with update) 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup with update: Launch backup (with update) 2`] = `
Object {
  "entry": undefined,
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup with update: Launch backup (with update) 3`] = `
Object {
  "response": Object {
    "code": 0,
  },
}
`;

exports[`AppService #launchBackup should make a backup: Define journal entry 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "from": "disk",
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup: Define journal entry 2`] = `
Object {
  "entry": undefined,
  "from": "disk",
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup: Launch backup (normal) 1`] = `
Object {
  "entry": Object {
    "manifest": Object {
      "chunks": Array [
        Object {
          "data": Array [
            120,
            33,
            153,
            168,
            222,
            33,
            57,
            10,
            128,
            77,
            242,
            219,
            140,
            195,
            8,
            196,
            216,
            150,
            108,
            16,
            225,
            129,
            162,
            82,
            249,
            106,
            243,
            92,
            81,
            233,
            104,
            47,
          ],
          "type": "Buffer",
        },
        Object {
          "data": Array [
            74,
            134,
            2,
            226,
            188,
            159,
            62,
            185,
            247,
            68,
            218,
            49,
            176,
            225,
            171,
            245,
            71,
            64,
            35,
            233,
            74,
            139,
            186,
            151,
            236,
            245,
            68,
            245,
            120,
            55,
            47,
            255,
          ],
          "type": "Buffer",
        },
      ],
      "path": Object {
        "data": Array [
          47,
          52,
          50,
          48,
          57,
          51,
          95,
          88,
          95,
          72,
          111,
          116,
          32,
          82,
          111,
          100,
          46,
          112,
          100,
          102,
        ],
        "type": "Buffer",
      },
      "sha256": Object {
        "data": Array [
          70,
          180,
          117,
          199,
          3,
          198,
          57,
          242,
          28,
          114,
          93,
          175,
          30,
          237,
          25,
          58,
          177,
          234,
          102,
          160,
          105,
          2,
          139,
          81,
          46,
          11,
          202,
          96,
          83,
          62,
          3,
          124,
        ],
        "type": "Buffer",
      },
      "stats": Object {
        "created": Long {
          "high": 376,
          "low": 1271037455,
          "unsigned": false,
        },
        "groupId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "lastModified": Long {
          "high": 371,
          "low": 1656647184,
          "unsigned": false,
        },
        "lastRead": Long {
          "high": 372,
          "low": 1063485888,
          "unsigned": false,
        },
        "mode": Long {
          "high": 0,
          "low": 33188,
          "unsigned": false,
        },
        "ownerId": Long {
          "high": 0,
          "low": 1000,
          "unsigned": false,
        },
        "size": Long {
          "high": 0,
          "low": 4503209,
          "unsigned": false,
        },
      },
    },
    "type": 0,
  },
  "response": undefined,
}
`;

exports[`AppService #launchBackup should make a backup: Launch backup (normal) 2`] = `
Object {
  "entry": undefined,
  "response": Object {
    "code": 2,
    "diskReadFinished": true,
  },
}
`;

exports[`AppService #launchBackup should make a backup: Launch backup (normal) 3`] = `
Object {
  "response": Object {
    "code": 0,
  },
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 1`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        49,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 100,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 2`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        50,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 200,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 3`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        51,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 300,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 4`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        52,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 400,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 5`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        53,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 500,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define journal entry 6`] = `
Object {
  "manifest": Object {
    "path": Object {
      "data": Array [
        47,
        116,
        101,
        115,
        116,
        54,
      ],
      "type": "Buffer",
    },
    "stats": Object {
      "size": Long {
        "high": 0,
        "low": 600,
        "unsigned": false,
      },
    },
  },
  "type": 0,
}
`;

exports[`AppService #refreshCache should create a manifest file from scratch: Define refresh cache 1`] = `
Object {
  "code": 0,
}
`;

exports[`AppService #refreshCache should have an error when no header: Define refresh cache 1`] = `
Object {
  "code": 1,
  "message": "The header must be specified to refresh the cache",
}
`;
